@@ -7,6 +7,7 @@ Version 1.5.0
   * M2R convertor support for another MarkDown parsing way
   * check_version command for version check in all files
     in repository
+  * Bad parser in config fix
 
 Version 1.4.3
 
